@@ -1,17 +1,15 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-DIST blockdiag-0.5.2.tar.gz 34932 RMD160 120535497597b95642409ce10672d34027f6d6fe SHA1 eb414fe7d804a63302c2c6497600429481241a48 SHA256 b686f18f8ce45c8353e0687c1178035a362bd10bff5cc9f52a6fa7f97bd7ec88
 DIST blockdiag-0.6.2.tar.gz 37482 RMD160 9aad7c9578ac75d9fdb591130afb88468ca606f5 SHA1 b32121c085f347585547adfaefc8deb3543c3398 SHA256 7e1e4e2b0341d7fd18aaf73c22d4ea60d17aa965c59b9cd152ea8537d0c3f632
-EBUILD blockdiag-0.5.2.ebuild 899 RMD160 f336187998336ce36273955b9ec2ea01c425d3e0 SHA1 ebc83499c2791644454708a5e1681497e6ae085f SHA256 6e0244e8d51a677a44ae497df1f3eadbbb21aec2bcb6e73f25053a588e5c315c
-EBUILD blockdiag-0.6.2.ebuild 899 RMD160 8a981b0026ce5c492e7032059cf8c6cb5b0fb0bd SHA1 cce1ef1f17cd846e9282c842ee97257aea4a837c SHA256 cae8356f2a5c4845d7938ff9dcdc058a072190b9d1cf5c0e4662c34a569154c7
-MISC ChangeLog 1909 RMD160 946b5eb5010b3c1e2e910498ccdd94f09ad373f2 SHA1 27cd991213ba4fe1bff096231ce48b4d8e5a9904 SHA256 ff51f7a92881d6ad6618b24d94837bfc4eb10a7fc3fc9431c566e582167a17e8
+EBUILD blockdiag-0.6.2.ebuild 898 RMD160 b5d963a0d97cc31b8de02c2c27a26d60b61c6878 SHA1 f7afb7713c55063612d1c142cecb566dbb00f036 SHA256 cef9e84b6d0c08225379aacfa32cc6ec2a74969a1750f016e156eaf657f414da
+MISC ChangeLog 2023 RMD160 055bca9696edd200bcea9c9203f76dcbdcc49913 SHA1 f315e81d5c286516fb063ae93bd852801c41e361 SHA256 c3e3910eaeaf6211f3582e958040f7c624001573f5b121bdfd762a9136faba4c
 MISC metadata.xml 669 RMD160 dcb67ada7b260b3ce4d5b5ec3f66ce2193ea2413 SHA1 22302b9b620dfb15f8c13137c866a5ac587e86e9 SHA256 24d91965daa15b89c7a8fa1e6eefaa6d459645d881cd67a1738198253cebd533
 MISC watch 12 RMD160 93a2adec9e10f09240c494996f1b879ab1a61113 SHA1 d61fd79473fa9466604269b1d76a71d70ed24b7a SHA256 806ffafa2258c82b35917a67c5f7faff76604958adae5efb722ca9ef82ee2874
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.16 (GNU/Linux)
 
-iEYEARECAAYFAk1UQnMACgkQzJrj3cAXR0lv2gCgi91KGqH2U8Uq0V+TI2hHA3+6
-O2sAmwWtuIO6vcz6034W823ZMisS9A9X
-=XLJp
+iEYEARECAAYFAk1UWWwACgkQzJrj3cAXR0lxWQCeJbwkJq0MDo4JMNGGTsRAbGbf
+ukgAniyN9w2K3/6/x2v9JzUEHiZ7DfIZ
+=0NZs
 -----END PGP SIGNATURE-----
