@@ -1,4 +1,3 @@
-REM 2011-02-10 *1 +1 UNTIL 2038-01-19 MSG Stabilise x86 media-gfx/blockdiag-0.6.2 %a
 REM 2011-02-10 *1 +1 UNTIL 2038-01-19 MSG Stabilise x86 media-gfx/sphinxcontrib-blockdiag-0.6.1 %a
 REM 2011-02-11 *1 +1 UNTIL 2038-01-19 MSG Stabilise amd64 sci-visualization/pycha-0.6.0 %a
 REM 2011-02-11 *1 +1 UNTIL 2038-01-19 MSG Stabilise x86 sci-visualization/pycha-0.6.0 %a
